data/derived/comb/progs/unify/prog3635.ml.out
Characters 51-58:
  | _ -> clone x::[] (n-1);;
         ^^^^^^^
Error: This expression has type int -> 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside int -> 'a list
